# MLOps-House-Price-Prediction

./: readme.md
backend/: .env.example  .gitignore  Dockerfile  docker-compose.local.yaml  docker-compose.yaml  pyproject.toml  readme.md
backend/nginx/: nginx.conf
backend/src/: app.py  config.py  exceptions.py  logger.py
backend/src/router/: __init__.py  predict.py
backend/src/schemas/: predict.py
backend/src/static/amenity/: culture.json  eat.json  edu.json  health.json
backend/src/utils/: amenity.py  district.py  feature_preparing.py  geoapify.py  models.py
frontend/: .env.example  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/public/: apartments.geojson  perm_districts.geojson
frontend/src/: App.tsx  index.css  main.tsx  reset.css
frontend/src/api/: axios.ts  env.d.ts
frontend/src/api/router/: predict.ts
frontend/src/api/schemas/: predict.ts
frontend/src/components/application-map/: ApplicationMap.css  ApplicationMap.tsx  constants.ts  layers.ts  sources.ts
frontend/src/components/house-carousel/: HouseCarousel.tsx
frontend/src/types/: house-params.ts  mapview.ts  own-house.ts  popup.ts
frontend/src/utils/: price.ts
infrastructure/: .env.example  .gitignore  readme.md
infrastructure/minio/: docker-compose.yml
infrastructure/mlflow/: Dockerfile  docker-compose.yml
infrastructure/monitoring/: dashboard.json  docker-compose.yml  prometheus.yml
research/: .env.example  .gitignore  Makefile  README.md  dvc.yaml  pyproject.toml
research/data/interim/: .gitignore
research/src/: __init__.py
research/src/data/: __init__.py  download_data.py
research/src/features/: __init__.py  add_coordinates.py  clean_raw_data.py  download_amenities.py  finalize_data.py
research/src/models/: __init__.py  catboost_model.py  linear_model.py  random_forest.py
research/src/visualization/: __init__.py
(+4 files in other folders)
